--- a/backend/kairos/.gitignore
+++ b/backend/kairos/.gitignore
@@ -3,6 +3,10 @@
 /node_modules
 /build
 
+# Files
+/files/*
+/uploads/*
+
 # Logs
 logs
 *.log
@@ -54,3 +58,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+swagger-spec.json
