--- a/frontend/kairos/package.json
+++ b/frontend/kairos/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"@flaticon/flaticon-uicons": "^3.2.1",
 		"dayjs": "^1.11.11",
+		"flowbite-svelte-blocks": "^1.1.1",
 		"svelte-meta-tags": "^3.1.2",
 		"tailwind-merge": "^2.3.0"
 	}
