--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main",
-    "start:dev": "npm run typeorm:mgr:run && nest start --watch",
+    "start:dev": "nest start --watch",
+    "start2:dev": "npm run typeorm:mgr:run && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "npm run start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -40,6 +41,7 @@
     "@nestjs/websockets": "^10.3.8",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "helmet": "7.0.0",
@@ -53,6 +55,7 @@
     "path": "^0.12.7",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
+    "socket.io": "^4.7.5",
     "swagger-themes": "^1.4.2",
     "typeorm": "0.3.20",
     "uuid": "^9.0.0"
