--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - .env
     environment:
       NEXT_PUBLIC_BACKEND_URL: http://kairos-backend:3000
+      AUTH_SECRET: rgfvsdfsdfev8923r8f
     ports:
       - "3003:3000"
     volumes:
@@ -66,7 +67,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRE_IN: ${JWT_EXPIRE_IN}
     ports:
-      - "3002:3000"
+      - "3000:3000"
     volumes:
       - ./backend:/app
     # - /app/node_modules
